# soccer-sim

./: README.md  launchPlayers.sh  launchPlayers2Teams.sh
player/: CMakeLists.txt  defender.cpp  defender.hpp  defense.cpp  defense.hpp  field.cpp  field.hpp  forward.cpp  forward.hpp  goalkeeper.cpp  goalkeeper.hpp  main.cpp  player.cpp  player.hpp  player_test.cpp  player_test.hpp  roles.cpp  roles.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
